--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ img { vertical-align: middle; }
     
     height: auto;
     width: 600px;      /* ★핵심: 600px로 고정 (숫자를 조절해보세요) */
-    max-width: 100%;   /* 화면이 600px보다 작아지면 자동으로 줄어듦 (안전장치) */
+    max-width: 200px;   /* 화면이 600px보다 작아지면 자동으로 줄어듦 (안전장치) */
     display: block;    /* 가운데 정렬을 위해 필요 */
     margin: 0 auto;    /* 가운데 정렬 */
 }
@@ -396,4 +396,5 @@ img { vertical-align: middle; }
     
     /* 책 리스트 세로 정렬 */
     .book-item { flex-direction: column; } 
+
     }
