--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ img { vertical-align: middle; }
 .item img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
 }
 
@@ -425,3 +425,4 @@ img { vertical-align: middle; }
         margin-bottom: 30px;
     }
 }
+
